--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.16.2",
-    "express": "^4.15.4",
-    "lodash": "^4.17.4",
+    "axios": "0.16.2",
+    "express": "4.15.4",
+    "lodash": "4.17.4",
     "next": "3.0.6",
     "react": "15.6.1",
-    "react-animated-weather": "^1.0.1",
+    "react-animated-weather": "1.0.3",
     "react-dom": "15.6.1"
   }
 }
